tiny CSS fix for IE7 (which recognizes border-collapse as cellspacing...kinda)

--- a/public/stylesheets/message.css
+++ b/public/stylesheets/message.css
@@ -15,6 +15,7 @@
 table#messages {
   margin: 20px 0 0 0;
   border-spacing: 0;
+  border-collapse: collapse;
   width: 100%;
 }
 
